implement get all user posts handler
